--- a/plugins/BetterRTP/lang/en.yml
+++ b/plugins/BetterRTP/lang/en.yml
@@ -10,6 +10,8 @@ Messages:
     NotSafe: '&cCould not find safe spot within %attempts% attempts! &7You were not
       RTP''d!'
   Other:
+    Biome: '&cSeems like the biome&7 %biome%&c does not exist! &7Try using the tab
+      list!'
     Success: '&a%player% has been tp''d to&7 x=%x% y=%y% z=%z% in &f%attempts% &7attempts!'
     NotSafe: '&cCould not find safe spot within %attempts% attempts! &7%player% was
       not rtp''d!'
@@ -37,6 +39,8 @@ Titles:
     Title: '&2Wilderness RTP &7(%attempts%)'
     Subtitle: '&3Teleporting to x=%x% y=%y% z=%z%'
 Help:
+  Biome: ' &7- &e/%command% biome <biome1, biome2...> &7- Randomly teleport withing
+    these biomes'
   List:
   - '&e&m------&r &6&lBetterRTP &8| &7Help &e&m------'
   - ' &7- &e/%command% &7- Randomly teleports you!'
@@ -46,6 +50,7 @@ Help:
   World: ' &7- &e/%command% world <world> &7- Randomly teleport in another world'
   Reload: ' &7- &e/%command% reload &7- Reloads the plugin'
 Usage:
+  Biome: '&cUsage&7: /%command% biome <biome1, biome2...>'
   Player: '&cUsage&7: /%command% player <player> [world]'
   World: '&cUsage&7: /%command% world <world>'
 Sounds:
